feat: add Room Person API endpoint
