# internal/types/room/types.go
@@ -1,6 +1,15 @@
 // Code generated by ginctl. DO NOT EDIT.
 package room
 
+import (
+	"github.com/hubogle/chatcode-server/internal/types"
+)
+
+// GetRoomPersonResp 房间人员列表
+type GetRoomPersonResp struct {
+	List []types.ChatItemInfo `binding:"required" json:"list"`
+}
+
 // RoomCreateResp 创建房间
 type RoomCreateResp struct {
 	// RoomId 房间id
@@ -23,4 +32,10 @@ type RoomCreateReq struct {
 type RoomGetReq struct {
 	// Id room id
 	Id int `binding:"required" uri:"id"`
+}
+
+// RoomPersonReq room person
+type RoomPersonReq struct {
+	// Id room id
+	Id uint64 `binding:"required" uri:"id"`
 }
